--- a/.github/workflows/external-trigger.yml
+++ b/.github/workflows/external-trigger.yml
@@ -68,8 +68,27 @@ jobs:
             --generate-notes \
             --notes "Read Immich release notes [here](https://github.com/immich-app/immich/releases/tag/${{ needs.check_new_version.outputs.immich_version }})"
 
+      - name: Get base image tag
+        id: tag
+        run: |
+          mkdir /tmp/immich
+          curl -o \
+            /tmp/immich.tar.gz -L \
+            "https://github.com/immich-app/immich/archive/${{ needs.check_new_version.outputs.immich_version }}.tar.gz" && \
+          tar xf \
+            /tmp/immich.tar.gz -C \
+            /tmp/immich --strip-components=1 && \
+          dockerfile_content=$(cat /tmp/immich/server/Dockerfile)
+          date=$(echo "$dockerfile_content" | grep -oP 'base-server-prod:\K\d{8}')
+          if [ -z "$date" ]; then
+            base_image_tag="latest";
+          else
+            base_image_tag="$date";
+          fi
+          echo "base_image_tag=${base_image_tag}" >> $GITHUB_OUTPUT
+
       - name: Trigger workflow
         if: github.event_name != 'push'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh workflow run docker.yml -f version=${{ needs.check_new_version.outputs.immich_version }}
+        run: gh workflow run docker.yml -f version=${{ needs.check_new_version.outputs.immich_version }} -f base_image_tag=${{ steps.tag.outputs.base_image_tag }}
