feat: pipeline to create releases with patches

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -140,7 +140,7 @@ jobs:
         run: poetry install --without dev,test
 
       - name: Create Dockerfile from template
-        run: poetry run python3 render_templates/main.py --flavor ${{ matrix.image }} --print-dockerfile
+        run: poetry run python3 render_templates/main.py --flavor ${{ matrix.image }} --print-dockerfile --enable-patches --immich-version ${{ steps.tags.outputs.immich_version }}
 
       - name: Generate docker image tags
         id: metadata
