--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -126,12 +126,14 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - name: Set up Python
-        run: |
-          uv venv
-          uv python install
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: pyproject.toml
 
       - name: Install python dependencies
-        run: uv pip install -r pyproject.toml
+        run: |
+          uv venv 
+          uv pip install -r pyproject.toml
 
       - name: Create Dockerfile from template
         run: uv run python3 -m render_templates.main --flavor ${{ matrix.image }} --print-dockerfile --enable-patches --immich-version ${{ steps.tags.outputs.immich_version }}
