--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -122,25 +122,16 @@ jobs:
           echo "short_version=${short_version}" >> $GITHUB_OUTPUT
           echo "base_image_tag=${base_image_tag}" >> $GITHUB_OUTPUT
 
-      - name: Install Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install poetry
-        run: pipx install poetry
-
-      - name: Setup poetry
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.12
-          cache: "poetry"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Install python dependencies
-        run: poetry install --without dev,test
+        run: |
+          uv venv 
+          uv pip install -r pyproject.toml
 
       - name: Create Dockerfile from template
-        run: poetry run python3 render_templates/main.py --flavor ${{ matrix.image }} --print-dockerfile --enable-patches --immich-version ${{ steps.tags.outputs.immich_version }}
+        run: uv run python3 -m render_templates.main --flavor ${{ matrix.image }} --print-dockerfile --enable-patches --immich-version ${{ steps.tags.outputs.immich_version }}
 
       - name: Generate docker image tags
         id: metadata
