--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,6 +42,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - image: rknn
+            platforms: linux/arm64
+            suffix: -rknn
+
           - image: armnn
             platforms: linux/arm64
             suffix: -armnn
