--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        flavor: ["armnn", "cpu", "cuda", "noml", "openvino"]
+        flavor: ["armnn", "cpu", "cuda", "noml", "openvino", "rknn"]
 
     steps:
       - uses: actions/checkout@v4
