--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -76,28 +76,13 @@ jobs:
           if [ "${{ inputs.version }}" != '' ]; then
             immich_version="${{ inputs.version }}"
           else
-            immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
-            counter=0
-
-            # Loop until immich_version is not "null" or counter reaches 10
-            while [ $counter -lt 10 ]; do
-                immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
-
-                # Check if immich_version is not "null"
-                if [ "$immich_version" != "null" ]; then
-                    echo "immich_version is not null: $immich_version"
-                    break
-                else
-                    echo "immich_version is still null, retrying in 10 seconds..."
-                    sleep 10
-                    ((counter++))
-                fi
-            done
-
-            if [ "$immich_version" = "null" ]; then
-                echo "immich_version is still null after 10 attempts, exiting..."
-                exit 1
-            fi
+            mkdir check_version
+            cd check_version
+            git init
+            git remote add origin https://github.com/immich-app/immich.git
+            git fetch --tags https://github.com/immich-app/immich.git
+            immich_version=$(git describe --tags $(git rev-list --tags --max-count=1))
+            cd ..
           fi
 
           if [ "${{ inputs.base_image_tag }}" != '' ]; then
