--- a/.github/workflows/external-trigger.yml
+++ b/.github/workflows/external-trigger.yml
@@ -26,24 +26,16 @@ jobs:
       - name: Check if new version is available
         id: check_version
         run: |
-          current_version=$(curl -sL https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/latest | jq -r '.tag_name')
-          immich_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name')
-          if [[ "$current_version" == "null" || "$immich_version" == "null" ]]; then
-              echo "new_version=false" >> $GITHUB_OUTPUT
-          fi
-          if [ "$current_version" != "$immich_version" ]; then
-            if git tag | grep -q "^$immich_version$"; then
-              echo "Tag '$immich_version' exists."
-            else
-              echo "New immich version ($immich_version) detected."
-              echo "current_version=$current_version" >> $GITHUB_OUTPUT
-              echo "immich_version=$immich_version" >> $GITHUB_OUTPUT
-              echo "new_version=true" >> $GITHUB_OUTPUT
-              exit 0
-            fi
-          else
-            echo "Immich version ($immich_version) already exists"
-          fi
+          git fetch --tags
+          current_version=version=$(git describe --tags $(git rev-list --tags --max-count=1))
+          mkdir check_version
+          cd check_version
+          git init
+          git remote add origin https://github.com/immich-app/immich.git
+          git fetch --tags https://github.com/immich-app/immich.git
+          version=$(git describe --tags $(git rev-list --tags --max-count=1))
+          echo "current version: $current_version"
+          echo "immich version: $immich_version"
           echo "new_version=false" >> $GITHUB_OUTPUT
 
   create_new_version:
