--- a/.github/workflows/external-trigger.yml
+++ b/.github/workflows/external-trigger.yml
@@ -86,7 +86,7 @@ jobs:
             /tmp/immich.tar.gz -C \
             /tmp/immich --strip-components=1 && \
           dockerfile_content=$(cat /tmp/immich/server/Dockerfile)
-          base_image_tag_in_dockerfile=$(echo "$dockerfile_content" | grep -oP 'base-server-prod:\K\d{8}')
+          base_image_tag_in_dockerfile=$(echo "$dockerfile_content" | grep -oP 'base-server-prod:\K[^@]+(?=@)')
           if [ -z "$base_image_tag_in_dockerfile" ]; then
             base_image_tag="latest";
           else
