--- a/.github/workflows/external-trigger.yml
+++ b/.github/workflows/external-trigger.yml
@@ -28,26 +28,20 @@ jobs:
         id: check_version
         run: |
           git fetch --tags
-          current_version=$(git describe --tags $(git rev-list --tags --max-count=1))
           if upstream_version=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | jq -r '.tag_name'); then
             if [ -n "$upstream_version" ] && [ "$upstream_version" != "null" ]; then
-              if [ "$current_version" != "$upstream_version" ]; then
-                if git tag | grep -q "^$version$"; then
-                  echo "Tag '$version' exists."
-                else
-                  echo "New immich version ($version) detected."
-                  echo "current version: $current_version"
-                  echo "upstream version: $upstream_version"
-                  echo "current_version=$current_version" >> $GITHUB_OUTPUT
-                  echo "version=$upstream_version" >> $GITHUB_OUTPUT
-                  echo "new_version=true" >> $GITHUB_OUTPUT
-                  exit 0
-                fi
+              if git tag | grep -q "^$upstream_version$"; then
+                echo "Immich version $upstream_version already exists"
+                echo "new_version=false" >> $GITHUB_OUTPUT
               else
-                echo "Immich version ($upstream_version) already exists"
+                echo "New immich version ($upstream_version) detected."
+                echo "upstream version: $upstream_version"
+                echo "version=$upstream_version" >> $GITHUB_OUTPUT
+                echo "new_version=true" >> $GITHUB_OUTPUT
+                exit 0
               fi
             else
-              echo "version is not set: $upstream_version" 
+              echo "version is not set: $upstream_version"
             fi
           else
             echo "curl failed" 
