--- a/.github/workflows/external-trigger.yml
+++ b/.github/workflows/external-trigger.yml
@@ -22,7 +22,8 @@ jobs:
       version: ${{ steps.check_version.outputs.version }}
       current_version: ${{ steps.check_version.outputs.current_version }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
       - name: Check if new version is available
         id: check_version
@@ -53,7 +54,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check_new_version]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
