--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v6
+        uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba #v6.3.1
 
       - name: Install python dependencies
         run: |
@@ -48,10 +48,11 @@ jobs:
         flavor: ["armnn", "cpu", "cuda", "noml", "openvino", "rknn"]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v6
+        uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba #v6.3.1
 
       - name: Install python dependencies
         run: |
@@ -62,13 +63,13 @@ jobs:
         run: uv run python3 -m render_templates.main --flavor ${{ matrix.flavor }}
 
       - name: Run Hadolint
-        uses: hadolint/hadolint-action@v3.1.0
+        uses: hadolint/hadolint-action@54c9adbab1582c2ef04b2016b760714a4bfde3cf #v3.1.0
         if: ${{ !cancelled() }}
         with:
           dockerfile: build-${{ matrix.flavor }}/Dockerfile
 
       - name: Run ShellCheck
-        uses: ludeeus/action-shellcheck@master
+        uses: ludeeus/action-shellcheck@00cae500b08a931fb5698e11e79bfbd38e612a38 #v2.0.0
         if: ${{ !cancelled() }}
         with:
           scandir: build-${{ matrix.flavor }}
@@ -92,10 +93,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
       - name: Install prettier
-        run: npm i prettier@3.3.3
+        run: npm i prettier@3.6.2
 
       - name: Run formatter
         run: npx prettier --check .
